traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:48: error: Unmatched closing brace '}' ignored here
}
^